# Qt_MusicPlayer

./: .gitignore
Coding/: CMakeLists.txt  main.cpp
Coding/funcservice/: CMakeLists.txt  gfuncprovider.cpp  gfuncprovider.h  glyricparser.cpp  glyricparser.h
Coding/interface/: CMakeLists.txt  gmusicplayservice.h
Coding/shell/: CMakeLists.txt
Coding/shell/pubheader/: gstyledef.h
Coding/shell/pubwidgets/include/: gcommonwidget.h  gfilelistmodel.h  gfilelistview.h  gfilelistwidget.h  glyricshowview.h  gprogressbar.h  gpushbutton.h
Coding/shell/pubwidgets/src/: gcommonwidget.cpp  gfilelistmodel.cpp  gfilelistview.cpp  gfilelistwidget.cpp  glyricshowview.cpp  gprogressbar.cpp  gpushbutton.cpp
Coding/shell/resource/: res.qrc
Coding/shell/uiwindows/include/: gmusicplayermainwidget.h
Coding/shell/uiwindows/src/: gmusicplayermainwidget.cpp  gmusicplayermainwidget.ui
